--- a/ExtrasKitDemo-iOS/ExtrasKitDemo-iOS/Info.plist
+++ b/ExtrasKitDemo-iOS/ExtrasKitDemo-iOS/Info.plist
@@ -27,9 +27,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
-	<key>UIMainStoryboardFile</key>
-	<string>Main</string>
+	<string>LaunchScreen.storyboard</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
