--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Xcode - Build and Analyze
 
 on:
   push:
-    branches: [ develop ]
+    branches: [develop, master]
   pull_request:
-    branches: [ develop ]
+    branches: [develop, master]
 
 jobs:
   jobs1:
